--- a/UITestProject/UITestProject.csproj
+++ b/UITestProject/UITestProject.csproj
@@ -86,7 +86,12 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Components\BaseComponent.cs" />
+        <Compile Include="Components\Saucedemo\Button.cs" />
+        <Compile Include="Components\Saucedemo\Input.cs" />
+        <Compile Include="Constants\ByType.cs" />
         <Compile Include="Pages\BasePage.cs" />
+        <Compile Include="Pages\Saucedemo\LoginPage.cs" />
         <Compile Include="Tests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Tests\BaseTestSuite.cs" />
@@ -97,9 +102,6 @@
     </ItemGroup>
     <ItemGroup>
       <Content Include="README.md" />
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="Pages\Saucedemo" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
