--- a/UITestProject/UITestProject.csproj
+++ b/UITestProject/UITestProject.csproj
@@ -103,6 +103,9 @@
     <ItemGroup>
       <Content Include="README.md" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Data" />
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
       <PropertyGroup>
