--- a/UITestProject/UITestProject.csproj
+++ b/UITestProject/UITestProject.csproj
@@ -105,6 +105,7 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Data" />
+      <Folder Include="Interfaces" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
