--- a/UITestProject/UITestProject.csproj
+++ b/UITestProject/UITestProject.csproj
@@ -37,18 +37,27 @@
         <Reference Include="AngleSharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=e83494dcdc6d31ea, processorArchitecture=MSIL">
           <HintPath>..\packages\AngleSharp.1.0.0-alpha-844\lib\net472\AngleSharp.dll</HintPath>
         </Reference>
+        <Reference Include="Castle.Core, Version=3.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+          <HintPath>..\packages\SeleniumWebDriverExtensions.1.0.3\lib\net40\Castle.Core.dll</HintPath>
+        </Reference>
         <Reference Include="ICSharpCode.SharpZipLib, Version=1.3.3.11, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
           <HintPath>..\packages\SharpZipLib.1.3.3\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
+        </Reference>
+        <Reference Include="Ionic.Zip, Version=1.9.1.8, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
+          <HintPath>..\packages\SeleniumWebDriverExtensions.1.0.3\lib\net40\Ionic.Zip.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.Win32.Registry, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
           <HintPath>..\packages\Microsoft.Win32.Registry.6.0.0-preview.5.21301.5\lib\net461\Microsoft.Win32.Registry.dll</HintPath>
         </Reference>
         <Reference Include="mscorlib" />
-        <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-          <HintPath>..\packages\Newtonsoft.Json.13.0.2-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
+        <Reference Include="Newtonsoft.Json, Version=4.0.6.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+          <HintPath>..\packages\SeleniumWebDriverExtensions.1.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
         </Reference>
         <Reference Include="nunit.framework, Version=3.13.3.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
           <HintPath>..\packages\NUnit.3.13.3\lib\net45\nunit.framework.dll</HintPath>
+        </Reference>
+        <Reference Include="SeleniumWebDriverExtensions, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+          <HintPath>..\packages\SeleniumWebDriverExtensions.1.0.3\lib\net40\SeleniumWebDriverExtensions.dll</HintPath>
         </Reference>
         <Reference Include="System" />
         <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -78,8 +87,11 @@
           <HintPath>..\packages\System.Text.Encoding.CodePages.7.0.0-preview.4.22229.4\lib\net462\System.Text.Encoding.CodePages.dll</HintPath>
         </Reference>
         <Reference Include="System.Xml" />
-        <Reference Include="WebDriver, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-          <HintPath>..\packages\Selenium.WebDriver.4.2.0\lib\net48\WebDriver.dll</HintPath>
+        <Reference Include="WebDriver, Version=2.20.0.0, Culture=neutral, PublicKeyToken=1c2bd1631853048f, processorArchitecture=MSIL">
+          <HintPath>..\packages\SeleniumWebDriverExtensions.1.0.3\lib\net40\WebDriver.dll</HintPath>
+        </Reference>
+        <Reference Include="WebDriver.Support, Version=2.20.0.0, Culture=neutral, PublicKeyToken=1c2bd1631853048f, processorArchitecture=MSIL">
+          <HintPath>..\packages\SeleniumWebDriverExtensions.1.0.3\lib\net40\WebDriver.Support.dll</HintPath>
         </Reference>
         <Reference Include="WebDriverManager, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
           <HintPath>..\packages\WebDriverManager.2.13.0\lib\net46\WebDriverManager.dll</HintPath>
@@ -90,6 +102,8 @@
         <Compile Include="Components\Saucedemo\Button.cs" />
         <Compile Include="Components\Saucedemo\Input.cs" />
         <Compile Include="Constants\ByType.cs" />
+        <Compile Include="Interfaces\IWebComponent.cs" />
+        <Compile Include="Interfaces\IWebPage.cs" />
         <Compile Include="Pages\BasePage.cs" />
         <Compile Include="Pages\Saucedemo\LoginPage.cs" />
         <Compile Include="Tests.cs" />
@@ -98,6 +112,7 @@
         <Compile Include="Tests\Saucedemo\LoginTestsuite.cs" />
     </ItemGroup>
     <ItemGroup>
+      <None Include="App.config" />
       <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
@@ -105,7 +120,6 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Data" />
-      <Folder Include="Interfaces" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
