--- a/UITestProject/packages.config
+++ b/UITestProject/packages.config
@@ -13,8 +13,10 @@
   <package id="Newtonsoft.Json" version="13.0.2-beta1" targetFramework="net48" />
   <package id="Selenium.Chrome.WebDriver" version="85.0.0" targetFramework="net48" />
   <package id="Selenium.Firefox.WebDriver" version="0.27.0" targetFramework="net48" />
+  <package id="Selenium.Support" version="2.35.0" targetFramework="net48" />
   <package id="Selenium.WebDriver" version="4.2.0" targetFramework="net48" />
   <package id="Selenium.WebDriver.ChromeDriver" version="102.0.5005.6102" targetFramework="net48" />
+  <package id="SeleniumWebDriverExtensions" version="1.0.3" targetFramework="net48" />
   <package id="SharpZipLib" version="1.3.3" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="7.0.0-preview.4.22229.4" targetFramework="net48" />
