--- a/UITestProject/UITestProject.csproj
+++ b/UITestProject/UITestProject.csproj
@@ -93,6 +93,7 @@
         <Compile Include="Components\Saucedemo\Button.cs" />
         <Compile Include="Components\Saucedemo\Input.cs" />
         <Compile Include="Constants\ByType.cs" />
+        <Compile Include="Data\DataSource.cs" />
         <Compile Include="Interfaces\IWebComponent.cs" />
         <Compile Include="Interfaces\IWebPage.cs" />
         <Compile Include="Pages\BasePage.cs" />
@@ -107,10 +108,8 @@
       <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
+      <Content Include="Data\userCatalog.json" />
       <Content Include="README.md" />
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="Data" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
